--- a/backend/package.json
+++ b/backend/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "ai-google",
+  "name": "voice-chat",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+"main": "src/server.js",
+
   "scripts": {
     "start": "node src/server.js",
     "dev": "nodemon src/server.js"
