--- a/package.json
+++ b/package.json
@@ -2,12 +2,10 @@
   "name": "voice-chat",
   "version": "1.0.0",
   "description": "",
-"main": "src/server.js",
-
+  "main": "src/server.js",
   "scripts": {
     "start": "node src/server.js",
     "dev": "nodemon src/server.js"
-
   },
   "keywords": [],
   "author": "",
@@ -17,7 +15,9 @@
     "@google/generative-ai": "^0.24.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
-    "express": "^5.1.0",
+    "express": "^5.1.0"
+  },
+  "devDependencies": {
     "nodemon": "^3.1.10"
   }
 }
